--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,167 @@ body {
   font-family: 'SFProDisplay-Regular', sans-serif;
   font-size: 1.6rem;
   color: #2f3035;
-  background-color: #f3f3f3; }
+  background-color: #fff; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0; }
+
+p {
+  margin: 0;
+  padding: 0; }
+
+.container {
+  max-width: 120rem;
+  padding: 0 1.5rem;
+  margin: 0 auto; }
+
+ul,
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
+
+a {
+  text-decoration: none;
+  color: inherit; }
+
+.header {
+  max-height: 12rem; }
+  .header__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    margin: 5rem 0;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px; }
+  .header__mob-nav {
+    display: none; }
+  .header__left-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .header__left-item {
+    margin-right: 5rem; }
+  .header__logo {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); }
+  .header__right {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .header__address {
+    margin-right: 8rem;
+    padding-left: 3.5rem;
+    position: relative; }
+    .header__address::before {
+      content: '';
+      position: absolute;
+      top: -1rem;
+      left: 0;
+      width: 3rem;
+      height: 3rem;
+      background-image: url(../img/map-pin.svg); }
+  .header__right-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 1rem; }
+  .header__mob-list {
+    display: none; }
+  .header__right-item {
+    margin: 0.5rem; }
+  .header__bottom-list {
+    min-height: 5rem;
+    background-color: #f0f0f4;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .header__bottom-item {
+    padding: 1.5rem 0; }
+    .header__bottom-item:hover {
+      border-bottom: 2px solid #1c62cd; }
+  .header__mob-menu {
+    display: none; }
+
+@media (max-width: 1030px) {
+  .header__left-item {
+    margin-right: 2rem; }
+  .header__address {
+    margin-right: 4rem; } }
+
+@media (max-width: 920px) {
+  .header__left-item {
+    margin-right: 1.5rem; }
+  .header__address {
+    margin-right: 2rem; } }
+
+@media (max-width: 870px) {
+  .header__nav {
+    margin: 3rem 0; }
+  .header__mob-nav {
+    display: block;
+    background-color: transparent;
+    border: none; }
+  .header__left-list {
+    display: none; }
+  .header__mob-list {
+    display: block;
+    background-color: #f0f0f4;
+    min-width: 45rem; }
+  .header__mob-item {
+    padding: 1.5rem 0;
+    display: inline-block;
+    margin-right: 1.5rem;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px; }
+  .header__mob-menu-item {
+    position: relative;
+    margin-top: 4.6rem;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+  .header__mob-menu-icon {
+    position: absolute;
+    top: 0;
+    left: 7px; }
+  .header__mob-list-wrapper {
+    overflow: scroll; }
+  .header__address {
+    display: none; }
+  .header__bottom-list {
+    display: none; }
+  .header__mob-menu {
+    transform: translateX(-100%);
+    transition: all 0.3s; }
+    .header__mob-menu--active {
+      transform: translateX(0%);
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      min-width: 25rem;
+      background-color: #fff;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15); }
+  .header__mob-menu-item {
+    padding-left: 4.5rem; }
+  .header__mob-menu-address {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    margin: 8rem 4rem; } }
+
+@media (max-width: 370px) {
+  .header__logo {
+    left: 35%; } }
