--- a/sass/banner.scss
+++ b/sass/banner.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  @include mb-desktop;
 
   &__slider {
     position: relative;
@@ -12,6 +13,9 @@
   }
 
   &__slide {
+    width: 100%;
+  }
+  &__slide-img {
     width: 100%;
   }
 
