--- a/sass/search.scss
+++ b/sass/search.scss
@@ -2,6 +2,11 @@
   @include mb-desktop;
   &__tabs {
     margin-bottom: 3.7rem;
+    min-width: 80rem;
+  }
+
+  &__tabs-wrapper {
+    overflow: scroll;
   }
 
   &__tab {
@@ -9,7 +14,7 @@
     font-size: 20px;
     line-height: 24px;
     opacity: 0.2;
-    margin-right: 0.4rem;
+    margin-right: 1.5rem;
     padding: 1.1rem 2.6rem;
 
     &--active {
@@ -32,5 +37,41 @@
 
   &__btn {
     margin-left: -3px;
+  }
+}
+
+@media (max-width: 80rem) {
+  .search {
+    &__tab {
+      padding: 1.1rem 0;
+      &--active {
+        background-color: #fff;
+        border-bottom: 2px solid $primary;
+        border-radius: 0;
+      }
+    }
+
+    &__content-item {
+      position: relative;
+    }
+
+    // &__btn .btn {
+    //   display: none;
+    // }
+
+    // &__btn {
+    //   position: absolute;
+    //   top: 10px;
+    //   right: 10px;
+    //   width: 2.5rem;
+    //   height: 2.8rem;
+    //   border: none;
+    //   background-color: transparent;
+    //   background-image: url(../img/icons/search.svg);
+    //   background-size: 25px 25px;
+    //   background-repeat: no-repeat;
+
+    //   font-size: 0;
+    // }
   }
 }
