--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,111 @@ a {
   border: none;
   border-radius: 3px; }
 
+.title {
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 30px;
+  margin-bottom: 2.5rem; }
+
+.card__not-available.card__not-available--active .card__price {
+  display: none; }
+
+.card {
+  position: relative;
+  width: 27rem;
+  height: 43.7rem;
+  border: 1px solid #cdcdcd;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 0.3s ease; }
+  .card:hover {
+    color: #1c62cd; }
+  .card:hover .card__hover {
+    opacity: 1;
+    transition: all 0.3s ease;
+    color: #2f3035; }
+  .card__hover {
+    opacity: 0;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    width: 23rem;
+    transform: translateX(-50%);
+    padding: 18px 22px;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 3px; }
+  .card__img {
+    margin: 5.2rem auto 1.2rem; }
+  .card__title {
+    display: inline-block;
+    padding: 0 2rem;
+    margin-bottom: 3.5rem;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center; }
+  .card__price {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 36px; }
+  .card__not-available {
+    display: none; }
+    .card__not-available--active {
+      display: block;
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 21px;
+      text-align: center;
+      color: #2f3035; }
+      .card__not-available--active span {
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 19px;
+        text-decoration: underline;
+        color: #1c62cd; }
+
+.wishlist {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 25px;
+  height: 25px;
+  background-image: url(../img/heart.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+  border: none;
+  outline: none; }
+  .wishlist--active {
+    background-image: url(../img/heart-active.svg); }
+
+.cart {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 60px;
+  height: 40px;
+  background-color: #1c62cd !important;
+  background-image: url(../img/cart-white.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 30px 22px;
+  border: none;
+  border-radius: 10px 0px 0px 0px; }
+
+.card.card__not-available--active .card__price {
+  display: none; }
+
+.card.card__not-available--active .card__not-available {
+  display: block; }
+
 .search {
   margin-bottom: 8rem; }
   .search__tabs {
@@ -381,6 +486,7 @@ a {
     align-items: center;
     padding: 2rem 1rem 1.5rem 2rem;
     width: 37rem;
+    height: 13rem;
     margin: 1rem;
     background: #ffffff;
     border: 1px solid #f0f0f4;
@@ -411,3 +517,23 @@ a {
       background-position: center;
       width: 7px;
       height: 10px; }
+
+.popular {
+  margin-bottom: 8rem; }
+  .popular__content-item {
+    display: none; }
+    .popular__content-item--active {
+      display: block; }
+  .popular__list {
+    position: relative; }
+  .popular__slider-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    background-color: transparent;
+    background-repeat: no-repeat; }
+    .popular__slider-btn--next {
+      right: -10px; }
+    .popular__slider-btn--prev {
+      left: -25px; }
