--- a/sass/elements.scss
+++ b/sass/elements.scss
@@ -98,8 +98,8 @@
   border: 1px solid #cdcdcd;
   border-radius: 3px;
 
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   // justify-content: space-between;
   align-items: center;
   transition: all 0.3s ease;
@@ -131,14 +131,23 @@
     border-radius: 3px;
   }
 
-  &__img {
-    margin: 5.2rem auto 1.2rem;
+  &__img-wrapper {
+    height: 30rem;
+    margin-bottom: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
 
   &__title {
+    position: absolute;
+    top: 26.3rem;
+    left: 50%;
+    width: 20rem;
+    transform: translateX(-50%);
     display: inline-block;
-    padding: 0 2rem;
-    margin-bottom: 3.5rem;
+    // padding: 0 2rem;
+    // margin-bottom: 3.5rem;
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
@@ -146,14 +155,24 @@
   }
 
   &__price {
+    position: absolute;
+    bottom: 3rem;
+    left: 50%;
+    transform: translateX(-50%);
     font-weight: bold;
     font-size: 30px;
     line-height: 36px;
+    margin-bottom: 3rem;
   }
 
   &__not-available {
     display: none;
     color: #2f3035 !important;
+    position: absolute;
+    bottom: 2.5rem;
+    left: 50%;
+
+    transform: translateX(-50%);
 
     &--active {
       display: block;
@@ -163,6 +182,9 @@
       text-align: center;
 
       & span {
+        display: block;
+        width: 20rem;
+        margin-top: 1.5rem;
         font-weight: normal;
         font-size: 16px;
         line-height: 19px;
@@ -219,5 +241,45 @@
   @include mb-desktop;
   & img {
     width: 100%;
+  }
+}
+
+.breadcrumbs {
+  // @include mb-desktop;
+  margin-bottom: 4rem;
+  &__list {
+    display: flex;
+    align-items: center;
+  }
+  &__item {
+    padding-right: 2.6rem;
+    display: inbline-block;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 18px;
+    color: #c4c4c4;
+    position: relative;
+
+    &:not(:last-child)::after {
+      content: '';
+      position: absolute;
+      top: 3px;
+      right: 8px;
+      width: 7px;
+      height: 11px;
+      background-image: url(../img/breadcrumbs.svg);
+      background-repeat: no-repeat;
+    }
+  }
+}
+
+.pagination {
+  &__list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__item {
+    margin-right: 3rem;
   }
 }
