--- a/css/style.css
+++ b/css/style.css
@@ -266,18 +266,20 @@ a {
       line-height: 22px;
       color: #1c62cd; }
 
-.sale::before {
-  content: 'SALE';
-  padding: 8px 20px;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  line-height: 15px;
-  letter-spacing: 0.1em;
-  background-color: #1c62cd;
-  position: absolute;
-  top: 0;
-  left: 0; }
+.sale {
+  z-index: 100; }
+  .sale::before {
+    content: 'SALE';
+    padding: 8px 20px;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    line-height: 15px;
+    letter-spacing: 0.1em;
+    background-color: #1c62cd;
+    position: absolute;
+    top: 0;
+    left: 0; }
 
 .slick-dots {
   z-index: 100;
@@ -1004,3 +1006,124 @@ a {
 
 .filter__checkbox:checked + .filter__label::after {
   display: block; }
+
+.product {
+  margin-bottom: 8rem; }
+  .product__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .product__content-item {
+    display: none; }
+    .product__content-item--active {
+      display: block; }
+  .product__photo {
+    text-align: center;
+    position: relative; }
+  .product__img {
+    padding-top: 6rem; }
+  .product__old-price {
+    margin-top: 1.8rem;
+    font-size: 30px;
+    line-height: 36px;
+    color: #2f3035;
+    opacity: 0.6; }
+  .product__new-price {
+    margin: 1.2rem 0;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 48px;
+    color: #2f3035; }
+  .product__photo-more {
+    font-size: 15px;
+    line-height: 18px;
+    color: #1c62cd; }
+  .product__info {
+    max-width: 57rem;
+    width: 100%; }
+  .product__title {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 36px;
+    margin-bottom: 1rem; }
+  .product__code {
+    display: block;
+    font-size: 15px;
+    line-height: 18px;
+    color: #2f3035;
+    opacity: 0.6;
+    margin-bottom: 2.2rem; }
+  .product__rating-box {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 5rem; }
+  .product__rating-like {
+    width: 25px;
+    height: 25px;
+    background-image: url(../img/heart.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    margin-right: 2.5rem; }
+    .product__rating-like--active {
+      background-image: url(../img/heart-active.svg); }
+  .product__rating {
+    margin-right: 2.5rem; }
+  .product__tabs {
+    display: flex;
+    align-items: center;
+    margin-bottom: 2.5rem; }
+  .product__tab {
+    margin-right: 3rem;
+    font-size: 20px;
+    line-height: 24px;
+    color: #2f3035;
+    padding-bottom: 5px;
+    opacity: 0.6; }
+    .product__tab--active {
+      opacity: 1;
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 24px;
+      color: #2f3035;
+      border-bottom: 2px solid #1c62cd; }
+  .product__table {
+    max-width: 43.6rem;
+    width: 100%;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    color: #2f3035; }
+  .product__row {
+    margin-top: 1.5rem;
+    display: flex;
+    padding-bottom: 6px;
+    border-bottom: 1px solid #c4c4c4; }
+    .product__row td {
+      display: inline-block; }
+  .product__data:first-child {
+    margin-right: auto; }
+  .product__data:last-child {
+    width: 12.3rem; }
+  .product__more {
+    display: inline-block;
+    margin-top: 2rem;
+    color: #1c62cd;
+    padding-bottom: 2px;
+    border-bottom: 1px solid #1c62cd; }
+  .product__btn {
+    display: block;
+    width: 17.7rem;
+    margin-top: 4.5rem;
+    background-color: #1c62cd;
+    padding: 16px 53px;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+    text-align: center;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    /* белый */
+    color: #ffffff; }
