--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ a {
 .header {
   max-height: 12rem;
   margin-bottom: 8rem; }
+  @media (max-width: 600px) {
+    .header {
+      margin-bottom: 4rem; } }
   .header__nav {
     display: flex;
     justify-content: space-between;
@@ -183,6 +186,9 @@ a {
   justify-content: space-around;
   flex-wrap: wrap;
   margin-bottom: 8rem; }
+  @media (max-width: 600px) {
+    .banner {
+      margin-bottom: 4rem; } }
   .banner__slider {
     position: relative;
     max-width: 87rem;
@@ -209,6 +215,7 @@ a {
   position: relative;
   max-width: 26.5rem;
   margin: 0.5rem;
+  margin-top: 2rem;
   width: 100%;
   border: 1px solid #cdcdcd;
   border-radius: 3px;
@@ -342,6 +349,7 @@ a {
   display: none; }
 
 .card {
+  margin: 0 auto;
   position: relative;
   width: 27rem;
   height: 43.7rem;
@@ -457,6 +465,9 @@ a {
 
 .ad {
   margin-bottom: 8rem; }
+  @media (max-width: 600px) {
+    .ad {
+      margin-bottom: 4rem; } }
   .ad img {
     width: 100%; }
 
@@ -534,6 +545,9 @@ a {
 
 .search {
   margin-bottom: 8rem; }
+  @media (max-width: 600px) {
+    .search {
+      margin-bottom: 4rem; } }
   .search__tabs {
     margin-bottom: 3.7rem;
     min-width: 80rem; }
@@ -559,8 +573,10 @@ a {
       display: flex; }
   .search__btn {
     margin-left: -3px; }
+  .search__mob-btn {
+    display: none; }
 
-@media (max-width: 80rem) {
+@media (max-width: 800px) {
   .search__tab {
     padding: 1.1rem 0; }
     .search__tab--active {
@@ -568,10 +584,26 @@ a {
       border-bottom: 2px solid #1c62cd;
       border-radius: 0; }
   .search__content-item {
-    position: relative; } }
+    position: relative; }
+  .search__btn {
+    display: none; }
+  .search__mob-btn {
+    display: block;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 10px;
+    right: 16px;
+    background-color: transparent;
+    background-image: url(../img/icons/search.svg);
+    background-repeat: no-repeat;
+    border: none; } }
 
 .categories {
   margin-bottom: 8rem; }
+  @media (max-width: 600px) {
+    .categories {
+      margin-bottom: 4rem; } }
   .categories__list {
     display: flex;
     flex-wrap: wrap;
@@ -615,12 +647,21 @@ a {
       width: 7px;
       height: 10px; }
 
+@media (max-width: 450px) {
+  .categories__link {
+    width: 31rem; } }
+
 .popular {
   margin-bottom: 8rem; }
+  @media (max-width: 600px) {
+    .popular {
+      margin-bottom: 4rem; } }
   .popular__content-item {
     display: none; }
     .popular__content-item--active {
       display: block; }
+  .popular__tab-wrapper {
+    overflow: scroll; }
   .popular__list {
     position: relative; }
   .popular__tab {
@@ -629,7 +670,8 @@ a {
     .popular__tab--active {
       border-bottom: 2px solid #1c62cd; }
   .popular__tabs {
-    margin-bottom: 3.5rem; }
+    margin-bottom: 3.5rem;
+    min-width: 83rem; }
   .popular__slider-btn {
     position: absolute;
     top: 50%;
@@ -660,6 +702,9 @@ a {
 
 .similar {
   margin-bottom: 8rem; }
+  @media (max-width: 600px) {
+    .similar {
+      margin-bottom: 4rem; } }
   .similar__content-item {
     display: none; }
     .similar__content-item--active {
@@ -671,8 +716,11 @@ a {
     padding-bottom: 1rem; }
     .similar__tab--active {
       border-bottom: 2px solid #1c62cd; }
+  .similar__tab-wrapper {
+    overflow: scroll; }
   .similar__tabs {
-    margin-bottom: 3.5rem; }
+    margin-bottom: 3.5rem;
+    min-width: 83rem; }
   .similar__slider-btn {
     position: absolute;
     top: 50%;
@@ -758,6 +806,17 @@ a {
   .footer__terms {
     margin-right: 8rem; }
 
+@media (max-width: 600px) {
+  .footer__subscribe {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 2rem; }
+  .footer__info {
+    margin-right: auto; }
+  .footer__info-2 {
+    margin: 2rem auto 2rem 1.5rem; } }
+
 .catalog__buttons {
   display: flex;
   justify-content: space-between;
@@ -815,6 +874,9 @@ a {
   margin-bottom: 8rem;
   display: flex;
   justify-content: space-around; }
+  @media (max-width: 600px) {
+    .catalog__inner {
+      margin-bottom: 4rem; } }
 
 .catalog__aside {
   min-width: 30rem; }
@@ -1050,11 +1112,17 @@ a {
 
 .product {
   margin-bottom: 8rem; }
+  @media (max-width: 600px) {
+    .product {
+      margin-bottom: 4rem; } }
   .product__wrapper {
     margin-bottom: 8rem;
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    @media (max-width: 600px) {
+      .product__wrapper {
+        margin-bottom: 4rem; } }
   .product__content-item {
     display: none; }
     .product__content-item--active {
