--- a/sass/banner.scss
+++ b/sass/banner.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100%;
     margin: 0;
+    // text-align: center;
   }
 
   &__slide {
@@ -40,6 +41,7 @@
   position: relative;
   max-width: 26.5rem;
   margin: 0.5rem;
+  margin-top: 2rem;
   width: 100%;
 
   border: 1px solid #cdcdcd;
