--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -69,3 +69,24 @@
     margin-right: 8rem;
   }
 }
+
+@media (max-width: 600px) {
+  .footer {
+    &__subscribe {
+      width: 100%;
+      margin: 0 auto;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    &__info {
+      margin-right: auto;
+    }
+    &__info-2 {
+      margin: 2rem auto 2rem 1.5rem;
+      // margin: 0 1.5rem;
+      // margin-top: 2rem;
+      // margin-right: auto;
+    }
+  }
+}
