--- a/sass/search.scss
+++ b/sass/search.scss
@@ -1,5 +1,6 @@
 .search {
   @include mb-desktop;
+
   &__tabs {
     margin-bottom: 3.7rem;
     min-width: 80rem;
@@ -38,9 +39,13 @@
   &__btn {
     margin-left: -3px;
   }
+
+  &__mob-btn {
+    display: none;
+  }
 }
 
-@media (max-width: 80rem) {
+@media (max-width: 800px) {
   .search {
     &__tab {
       padding: 1.1rem 0;
@@ -55,23 +60,23 @@
       position: relative;
     }
 
-    // &__btn .btn {
-    //   display: none;
-    // }
+    &__btn {
+      display: none;
+    }
+    &__mob-btn {
+      display: block;
+      width: 25px;
+      height: 25px;
 
-    // &__btn {
-    //   position: absolute;
-    //   top: 10px;
-    //   right: 10px;
-    //   width: 2.5rem;
-    //   height: 2.8rem;
-    //   border: none;
-    //   background-color: transparent;
-    //   background-image: url(../img/icons/search.svg);
-    //   background-size: 25px 25px;
-    //   background-repeat: no-repeat;
+      position: absolute;
+      top: 10px;
+      right: 16px;
 
-    //   font-size: 0;
-    // }
+      background-color: transparent;
+      background-image: url(../img/icons/search.svg);
+      background-repeat: no-repeat;
+
+      border: none;
+    }
   }
 }
