--- a/sass/catalog.scss
+++ b/sass/catalog.scss
@@ -1,14 +1,57 @@
 .catalog {
+  &__aside {
+    display: none;
+    &--active {
+      display: block;
+    }
+  }
+  &__btns-wrapper {
+    overflow: scroll;
+    margin-right: auto;
+    // min-width: 50rem;
+  }
+
+  &__select-wrapper {
+    display: flex;
+    align-items: center;
+  }
   &__buttons {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 4rem;
+    flex-wrap: wrap;
   }
   &__btn-list {
+    min-width: 50rem;
     display: flex;
     align-items: center;
-    margin-right: auto;
+  }
+
+  &__btn-item {
+    // max-height: 35px;
+    // min-width: 14.4rem;
+    margin-right: 8px;
+  }
+
+  &__btn-btn {
+    padding: 4px 22px;
+    background-color: $secondary;
+
+    font-family: inherit;
+    font-size: 14px;
+    line-height: 17px;
+
+    color: #2f3035;
+    opacity: 0.7;
+
+    border: none;
+    border-radius: 3px;
+
+    &:focus {
+      background-color: $primary;
+      color: #ffffff;
+    }
   }
   &__grid-btn {
     background-color: transparent;
@@ -41,24 +84,6 @@
     }
   }
 
-  &__btn-item {
-    padding: 4px 22px;
-    margin-right: 8px;
-    background-color: $secondary;
-    font-size: 14px;
-    line-height: 17px;
-
-    color: #2f3035;
-    opacity: 0.7;
-
-    border: none;
-    border-radius: 3px;
-
-    &:focus {
-      background-color: $primary;
-      color: #ffffff;
-    }
-  }
   &__inner {
     @include mb-desktop;
     display: flex;
@@ -114,6 +139,41 @@
 
     &--active {
       display: block;
+    }
+  }
+  &__mob-filter {
+    display: none;
+  }
+}
+
+@media (max-width: 820px) {
+  .catalog {
+    &__select-wrapper {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 610px) {
+  .catalog {
+    &__inner {
+      flex-wrap: wrap;
+    }
+
+    &__mob-filter {
+      display: none;
+      &--active {
+        display: block;
+        background-color: $primary;
+        color: #fff;
+        font-family: inherit;
+        border: none;
+        border-radius: 3px;
+        padding: 10px 30px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        margin-bottom: 1.5rem;
+      }
     }
   }
 }
